--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
             <!-- WORK -->
 
 
-            <h3> Yash Raj Films Pvt Ltd.
-
+            <h3> V&A Luxury
 
 
             </h3>
@@ -50,7 +49,7 @@
             <!-- DESCRIPTION -->
 
 
-         <h4> Human Resources And Administration Manager
+         <h4> Director
 
 
 
@@ -73,7 +72,8 @@
         <!-- CALLING NUMBER -->
 
 
-       <a href="tel:+919167735517
+       <a href="tel:+(866) 283-GEMS (4367) ext. 108
+
        "> <img src="./call.jpg" alt=""></a>
         <p>Call</p>
     </div>
@@ -82,7 +82,8 @@
         <!-- SMS NUMBER -->
 
 
-        <a href="sms:+919167735517
+        <a href="sms:+(832) 486-0635
+
         ">  <img src="./sms.jpg" alt=""></a>
         <p>SMS</p>
     </div>
@@ -92,7 +93,8 @@
 
         <!-- EMAIL ID -->
 
-        <a href="mailto:Mukesh@yashrajfilms.com
+        <a href="mailto:aryan@vandagroup.com
+
         ">  
               <img src="./e mail.jpg" alt="">
         </a>
@@ -105,7 +107,8 @@
 
         <!-- WEBSITE-->
 
-        <a href="#">    <img src="./website 1.jpg" alt="">      </a>
+        <a href="https://vandagroup.com
+        ">    <img src="./website 1.jpg" alt="">      </a>
            <p>Website</p>
     </div>
 
@@ -127,7 +130,7 @@
 
 
         <!-- SAVE CONTACT -->
-        <a href="https://vcard.link/card/DmLt.vcf">  <img src="./save contact.jpg" alt=""></a>
+        <a href="https://vcard.link/card/DdML.vcf">  <img src="./save contact.jpg" alt=""></a>
         <p>SAVE<br/>CONTACT</p>
     </div>
 
@@ -161,7 +164,8 @@
 
 
 
-        <a href="https://www.linkedin.com/in/mukesh-kanojia-25726a99?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app">  <img src="./04.jpg" alt=""></a>
+        <a href="https://www.linkedin.com/company/vandaluxury/
+        ">  <img src="./04.jpg" alt=""></a>
        
     </div>
 
@@ -169,7 +173,7 @@
 
         <!-- INSTAGRAM URL -->
 
-        <a href="https://www.instagram.com/mukeshkanojiaofficial?igsh=ZHc1MjU5ZmF0b3No
+        <a href="#
         /">   <img src="./05.jpg" alt="">      </a>
   
     </div>
@@ -180,7 +184,8 @@
 
 
 
-        <a href="https://api.whatsapp.com/send?phone=+919167735517
+        <a href="https://api.whatsapp.com/send?phone=+(832)4860635
+
         ">
             <img src="./01.jpg" alt=""></a>
        
@@ -189,14 +194,14 @@
 
         <!-- TWITTER -->
 
-        <a href="./@mukeshkanojia22">   <img src="./03.jpg" alt="">      </a>
+        <a href="./#">   <img src="./03.jpg" alt="">      </a>
   
     </div>
     <div class="cal1">
 
         <!-- FACEBOOK -->
 
-        <a href="https://www.facebook.com/Mukesh.kanojia14?mibextid=9R9pXO 
+        <a href="# 
         ">   <img src="./02.jpg" alt="">      </a>
   
     </div>
